테마별 코스 리스트 더미 데이터 통합